# maestro-research

./: README.md  pyproject.toml
demo/: audio.json  graph.py  prompts.py  server.py
docs/: langchain_arch.mmd  orchestrator_sketch.mmd  sketch.mmd  table-f1473a36-ce73-4bbe-918c-4a6420055aae-14.csv
